fixed spacing around feedback chevrons

--- a/source/scss/main.scss
+++ b/source/scss/main.scss
@@ -132,8 +132,7 @@ html body div.full-frame-scaffold-news-banner {
 
     .question__feedback {
         color: white;
-        margin-top: 30px;
-        margin-bottom: 94px;
+        margin-bottom: 70px;
         position: relative;
     }
 
